<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.PersonalInfoActivity">

    <include
        android:id="@+id/includeToolbar"
        layout="@layout/toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtFirstName"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ten_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginEnd="@dimen/ten_dp"
        app:layout_constraintBottom_toTopOf="@id/txtLastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/includeToolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtFirstName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/first_name"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:textColor="@color/black_shade"
            android:textColorHint="@color/gray_500"
            android:textSize="@dimen/font_size_16" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLastName"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ten_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginEnd="@dimen/ten_dp"
        app:layout_constraintBottom_toTopOf="@id/txtPhoneNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtFirstName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtLastName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/last_name"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:textColor="@color/black_shade"
            android:textColorHint="@color/gray_500"
            android:textSize="@dimen/font_size_16" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPhoneNo"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ten_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginEnd="@dimen/ten_dp"
        app:layout_constraintBottom_toTopOf="@id/tvGender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtFirstName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPhoneNo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone_no"
            android:imeOptions="actionDone"
            android:inputType="phone|number"
            android:maxLength="10"
            android:maxLines="1"
            android:textColor="@color/black_shade"
            android:textColorHint="@color/gray_500"
            android:textSize="@dimen/font_size_16" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fifteen_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginEnd="@dimen/ten_dp"
        android:text="@string/gender"
        app:layout_constraintBottom_toTopOf="@id/rgGender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtPhoneNo" />

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginEnd="@dimen/eight_dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvGender">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/five_dp"
            android:checked="true"
            android:text="@string/gender_male" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/five_dp"
            android:text="@string/gender_female" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_other" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvSelectDOB"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ten_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginEnd="@dimen/ten_dp"
        android:background="@drawable/black_rounded_border"
        android:drawablePadding="@dimen/five_dp"
        android:onClick="selectDob"
        android:padding="@dimen/ten_dp"
        android:text="@string/dob"
        app:drawableEndCompat="@drawable/ic_calendar_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgGender" />

    <Button
        android:id="@+id/btnSavePersonalInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/colorPrimary"
        android:onClick="savePersonalInfo"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
