<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.EmployeeInfoActivity">

    <include
        android:id="@+id/includeToolbar"
        layout="@layout/toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtEmployeeNo"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ten_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginEnd="@dimen/ten_dp"
        app:layout_constraintBottom_toTopOf="@id/txtEmployeeName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/includeToolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmployeeNo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/employee_no"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/black_shade"
            android:textColorHint="@color/gray_500"
            android:textSize="@dimen/font_size_16" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtEmployeeName"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ten_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginEnd="@dimen/ten_dp"
        app:layout_constraintBottom_toTopOf="@id/txtDesignation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtEmployeeName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmployeeName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/employee_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/black_shade"
            android:textColorHint="@color/gray_500"
            android:textSize="@dimen/font_size_16" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtDesignation"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ten_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginEnd="@dimen/ten_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtEmployeeName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtDesignation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/designation"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/black_shade"
            android:textColorHint="@color/gray_500"
            android:textSize="@dimen/font_size_16" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.amit.views.ASpinner
        android:id="@+id/spinnerAccountType"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ten_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginEnd="@dimen/ten_dp"
        android:hint="@string/account_type"
        android:textColor="@color/black_shade"
        app:layout_constraintBottom_toTopOf="@id/spinnerWorkExperience"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDesignation"
        app:spinner_dialog_icon_tint="@color/purple_500"
        app:spinner_dialog_title="@string/account_type" />

    <com.amit.views.ASpinner
        android:id="@+id/spinnerWorkExperience"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ten_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginEnd="@dimen/ten_dp"
        android:hint="@string/work_experience"
        android:textColor="@color/black_shade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerAccountType"
        app:spinner_dialog_icon_tint="@color/purple_500"
        app:spinner_dialog_title="@string/work_experience" />

    <Button
        android:id="@+id/btnSaveEmployeeInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/colorPrimary"
        android:onClick="saveEmployeeInfo"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
