<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.BankInfoActivity">

    <include
        android:id="@+id/includeToolbar"
        layout="@layout/toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtBankName"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ten_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginEnd="@dimen/ten_dp"
        app:layout_constraintBottom_toTopOf="@id/spinnerBranchName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/includeToolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtBankName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/bank_name"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:textColor="@color/black_shade"
            android:textColorHint="@color/gray_500"
            android:textSize="@dimen/font_size_16" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.amit.views.ASpinner
        android:id="@+id/spinnerBranchName"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ten_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginEnd="@dimen/ten_dp"
        android:hint="@string/branch_name"
        android:textColor="@color/black_shade"
        app:layout_constraintBottom_toTopOf="@id/txtAccountNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtBankName"
        app:spinner_dialog_icon_tint="@color/purple_500"
        app:spinner_dialog_title="@string/branch_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtAccountNo"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ten_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginEnd="@dimen/ten_dp"
        app:layout_constraintBottom_toTopOf="@id/txtIFSCCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerBranchName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtAccountNo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/account_no"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/black_shade"
            android:textColorHint="@color/gray_500"
            android:textSize="@dimen/font_size_16" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtIFSCCode"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ten_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginEnd="@dimen/ten_dp"
        app:layout_constraintBottom_toTopOf="@id/ivCaptureEmpImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtAccountNo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtIFSCCode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/ifsc_code"
            android:imeOptions="actionDone"
            android:inputType="textCapCharacters"
            android:maxLines="1"
            android:textColor="@color/black_shade"
            android:textColorHint="@color/gray_500"
            android:textSize="@dimen/font_size_16" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivCaptureEmpImage"
        android:layout_width="@dimen/hundred_twenty_dp"
        android:layout_height="@dimen/hundred_twenty_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:background="@drawable/black_rounded_border"
        android:onClick="captureEmpImage"
        android:padding="@dimen/three_dp"
        android:src="@drawable/add_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtIFSCCode" />

    <Button
        android:id="@+id/btnSaveBankInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/colorPrimary"
        android:onClick="saveBankInfo"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
